--- a/swiftLearn/index.html
+++ b/swiftLearn/index.html
@@ -55,6 +55,18 @@
         </div>
       </section>
       <!-- Hero Section -->
+
+      <!-- About Section -->
+      <section class="about_section">
+        <div class="abs">
+          <div>
+            <span>
+              <img src="./asset/msgIcon.svg" alt="Messaging Icon" />
+            </span>
+          </div>
+        </div>
+      </section>
+      <!-- About Section -->
     </main>
   </body>
 
